# fair-clustering

./: .envrc  .gitignore  Cargo.toml  Justfile  README.md  _targets.R  analysis.def  assess.py  assignment.py  batch.sh  datasets.py  env-analysis.yaml  env.yaml  experiments.py  experiments.qmd  fairclustering.def  kcenter.py  mapreduce.py  pyproject.toml  results.py  streaming.py  viz.py
.github/workflows/: CI.yml
R/: fig-mapreduce.R  fig-selected.R  fig-streaming.R  functions.R
baseline/: adapter.py  example.py  lp_freq_distributor.py  shared_utils.py
poster/: Justfile  environment.yml  index.html  plots.py  styles.css  styles.in.css
presentation/: alacarte.tex
presentation/alacarte/: Justfile  example.csv  gendata.py  plots.R  references.bib
presentation/www/: Justfile  thewebconf.tex
src/: lib.rs
